# metacatalog

./: .gitmodules  README.md  pyproject.toml
openspec/changes/archive/2026-04-15-catalog-credential-vending/: design.md  tasks.md
openspec/changes/archive/2026-04-15-cave-data-catalog/: design.md  proposal.md
openspec/changes/catalog-asset-type-schemas/: design.md  proposal.md  tasks.md
openspec/changes/catalog-credential-vending/: proposal.md  tasks.md
openspec/changes/catalog-deployment/: design.md  proposal.md  tasks.md
openspec/changes/catalog-frontend/: design.md  proposal.md  tasks.md
openspec/changes/catalog-service-credentials/: design.md  proposal.md  tasks.md
openspec/changes/catalog-simplify-mat-fields/: design.md  proposal.md  tasks.md
openspec/changes/catalog-table-model/: design.md  proposal.md  tasks.md
openspec/changes/catalog-view-definitions/: design.md  proposal.md  tasks.md
openspec/changes/column-kind-redesign/: design.md  tasks.md
openspec/changes/deltalake-export-ui/: design.md  proposal.md  tasks.md
openspec/changes/explore-assets-ui/: design.md
openspec/specs/asset-registry/: spec.md
openspec/specs/caveclient-catalog/: spec.md
openspec/specs/column-kind-schema/: spec.md
openspec/specs/credential-vending/: spec.md
openspec/specs/metadata-extraction/: spec.md
openspec/specs/table-column-annotations/: spec.md
openspec/specs/table-model/: spec.md
openspec/specs/table-registration-ui/: spec.md
scratch/: assess_uniformity.py  caveclient_debug.py  make_tables.py
(+45 files in other folders)
