[project]
name = "metacatalog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cave-catalog",
    "caveclient",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
]

[tool.uv.workspace]
members = [
    "submodules/caveclient",
    "submodules/catalog",
]

[tool.uv.sources]
caveclient = { workspace = true, editable = true }
cave-catalog = { workspace = true, editable = true }
